--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,54 @@
-.App {
-  text-align: center;
+#App{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+#input{
+    margin-top: 6vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.flexrow{
+    display: flex;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.flexrow > * {
+    margin: 0 3vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#word-definition{
+    width: 90%;
+    margin: 4vh auto;
+}
+
+@media (min-width: 800px){
+    #word-definition{
+        width: 60%;
+    }
+}
+
+.monospace{
+    font-family: monospace;
+}
+
+.part-of-speech > *{
+    margin: 4vh 0
+}
+
+.part-of-speech ol {
+    width: 90%;
+    margin: auto;
+}
+
+p, em{
+    line-height: 1.3;
+    margin: 1.4px
+}
+
+button{
+    background-color: #eee;
+    padding: 4px;
+    border-radius: 6px
 }
