--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,10 @@
-#App{
+.columns{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#input{
-    margin-top: 6vh;
-}
 
 .flexrow{
     display: flex;
@@ -18,9 +15,18 @@
     margin: 0 3vw;
 }
 
+.error{
+   color: #002222;
+}
+
+#loading, .error{
+    margin: 8vh;
+}
+
 #word-definition{
     width: 90%;
     margin: 4vh auto;
+    max-width: 550px;
 }
 
 @media (min-width: 800px){
@@ -30,7 +36,13 @@
 }
 
 .monospace{
+    font-size: calc(.3vw + .4vh + .9em);
     font-family: monospace;
+}
+
+.no-lateral-margin > *{
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .part-of-speech > *{
@@ -42,13 +54,41 @@
     margin: auto;
 }
 
-p, em{
+.definition, 
+.examples{
     line-height: 1.3;
-    margin: 1.4px
+    margin-top: 8px;
+    margin-bottom: 8px;
+    font-size: calc(.2vw + .4vh + .7em)
 }
 
-button{
-    background-color: #eee;
-    padding: 4px;
-    border-radius: 6px
+.synonyms{
+    font-size: calc(.2vw + .4vh + .7em);
+    margin-top: 8px;
+}
+
+.part-of-speech ol li{
+    margin: 20px;
+}
+
+/* styling input */
+span.button, 
+#word-input
+{
+    background-color: #fefefe;
+    padding: 6px;
+    border: 2px #1e1e1e solid;
+    color: #0e0e0e;
+    font-weight: 500;
+    font-size: 1em;
+}
+
+#word-input{
+    border-right: 0px;
+    width: 150%;
+}
+
+#input{
+    margin-top: 6vh;
+    font-size: cacl(.2vh + .2vw + .9em)
 }
