--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,8 @@ h3{
     max-width: 380px;
 }
 
-@media (min-width: 800px){
-    #word-definition{
+@media (min-width: 520px){
+    .word-definition{
         max-width: 600px;
     }
 }
@@ -69,6 +69,10 @@ h3{
     font-size: calc(.2vw + .4vh + .7em)
 }
 
+.examples{
+    color: #202020;
+}
+
 .synonyms{
     font-size: calc(.2vw + .4vh + .7em);
     margin-top: 8px;
@@ -99,5 +103,7 @@ span.button,
 
 #input{
     margin-top: 6vh;
-    font-size: cacl(.2vh + .2vw + .9em)
+    font-size: calc(.2vh + .2vw + .75em);
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
